--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -23,7 +23,7 @@
         <div class="app-outer-container">
             <div class="">
                 <div class="app-container">
-                    <img class="upper-app" src="{{ asset('images/app-home.png') }}" alt="Lingo Mac App">
+                    <img class="upper-app" src="{{ asset('images/app-home.png') }}" alt="User selection interface">
                 </div>
             </div>
         </div>
