Add "Hall of Fame" promotion to the finish page

--- a/templates/santa/finish.html.twig
+++ b/templates/santa/finish.html.twig
@@ -28,7 +28,7 @@
                         Try to send the remaining messages
                     </a>
                 </div>
-
+                
                 <script type="text/javascript">
                     var secretSantaRetried = false;
 
@@ -62,6 +62,13 @@
             <a href="{{ path('run') }}" class="big-button">
                 <span class="fa fa-repeat" aria-hidden="true"></span>
                 Start another Secret Santa
+            </a>
+        </div>
+
+        <div class="is-center">
+            <a href="{{ path('hall_of_fame') }}" class="big-button">
+                <span class="fa fa-star" aria-hidden="true"></span>
+                Add your company to the Hall of Fame !
             </a>
         </div>
     </div>
