--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -63,7 +63,7 @@
 
                 <div class="message-field">
                     <h2>
-                        <label class="control-label" for="message">Write an optionnal message</label>
+                        <label class="control-label" for="message">Write an optional message</label>
                     </h2>
 
                     <textarea name="message" id="message" rows="3">{{ message }}</textarea>
