Add support for Discord
Also:
- add missing Twig block in the run page
- add new screenshots for private messages samples
- updates Font Awesome to get icon for Discord
- export message dispatching in its own class, not coupled to Slack anymore

--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -11,7 +11,7 @@
         </div>
         <div class="is-center">
             <a href="{{ path('homepage') }}" class="big-button">
-                <span class="fa fa-angle-left" aria-hidden="true"></span>
+                <span class="fas fa-angle-left" aria-hidden="true"></span>
                 Go back to home page
             </a>
         </div>
