--- a/templates/bundles/TwigBundle/Exception/error500.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error500.html.twig
@@ -11,12 +11,12 @@
         </div>
         <div class="is-center">
             <a href="{{ path('homepage') }}" class="big-button">
-                <span class="fa fa-angle-left" aria-hidden="true"></span>
+                <span class="fas fa-angle-left" aria-hidden="true"></span>
                 Go back to home page
             </a>
 
             <a href="mailto:coucou+secretsanta@jolicode.com" class="big-button">
-                <span class="fa fa-support" aria-hidden="true"></span>
+                <span class="far fa-life-ring" aria-hidden="true"></span>
                 Contact support
             </a>
         </div>
