--- a/templates/content/hall_of_fame.html.twig
+++ b/templates/content/hall_of_fame.html.twig
@@ -19,7 +19,7 @@
         </div>
 
         <div class="content they-use-it">
-            <h2 class="content-head is-center"><i class="fa fa-star spin"></i> They use Slack Secret Santa <i class="fa fa-star spin"></i></h2>
+            <h2 class="content-head is-center"><i class="fas fa-star spin"></i> They use Slack Secret Santa <i class="fas fa-star spin"></i></h2>
 
             <ul>
                 {% for company in companies %}
@@ -35,5 +35,5 @@
 {% endblock content %}
 
 {% block contact %}
-    <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fa fa-star"></i> Want to be listed? Contact us!</a>
+    <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fas fa-star"></i> Want to be listed? Contact us!</a>
 {% endblock contact %}
