--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('style.css') }}">
 
@@ -35,10 +35,10 @@
 
                 <ul class="pure-menu-list">
                     <li class="pure-menu-item">
-                        <a class="pure-menu-link" href="{{ path('hall_of_fame') }}"><i class="fa fa-star"></i> Hall of Fame</a>
+                        <a class="pure-menu-link" href="{{ path('hall_of_fame') }}"><i class="fas fa-star"></i> Hall of Fame</a>
                     </li>
                     <li class="pure-menu-item">
-                        <a target="_blank" class="pure-menu-link" href="https://github.com/jolicode/slack-secret-santa/"><i class="fa fa-github"></i> Fork me on GitHub</a>
+                        <a target="_blank" class="pure-menu-link" href="https://github.com/jolicode/slack-secret-santa/"><i class="fab fa-github"></i> Fork me on GitHub</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
 
             <footer class="footer is-center {% block footerClass %}{% endblock %}">
                 {% block contact %}
-                    <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fa fa-support"></i> Need help? Contact us!</a>
+                    <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="far fa-life-ring"></i> Need help? Contact us!</a>
                 {% endblock contact %}
                 <p>
                     Made with ♥ by <a href="http://jolicode.com">JoliCode</a>
