--- a/templates/santa/spoil.html.twig
+++ b/templates/santa/spoil.html.twig
@@ -19,7 +19,7 @@
 
             <div class="is-center">
                 <a href="{{ path('homepage') }}" class="big-button">
-                    <span class="fa fa-repeat" aria-hidden="true"></span>
+                    <span class="fas fa-redo" aria-hidden="true"></span>
                     Start another Secret Santa
                 </a>
             </div>
@@ -41,7 +41,7 @@
 
                 <div class="is-center">
                     <button type="submit" class="big-button">
-                        <span class="fa fa-user-secret" aria-hidden="true"></span>
+                        <span class="fas fa-user-secret" aria-hidden="true"></span>
                         Decode!
                     </button>
                 </div>
