--- a/public/style.css
+++ b/public/style.css
@@ -44,7 +44,19 @@ a {
 .big-button.warning-btn:hover {
     background-color: #FFA500;
 }
-
+.hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    border: 0;
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
+}
 /**
  * Header
  */
@@ -222,19 +234,22 @@ footer a {
     box-sizing: content-box;
     padding: 1em;
 }
+.jumbotron .actions {
+    margin: 1em 0 2em;
+}
 .jumbotron .action:hover {
   color: #56B68B;
 }
 .jumbotron .action {
     display: inline-block;
-    margin: 1em 0 2em;
-    font-size: 2.5em;
+    margin: 0 0.5em;
+    font-size: 1.5em;
     text-decoration: none;
     background-color: white;
     border: 3px solid white;
     color: #E03A4D;
     border-radius: 10px;
-    padding: 18px;
+    padding: 10px;
 
 }
 @media screen and (max-width: 860px) {
@@ -526,6 +541,10 @@ textarea {
 }
 .user-list .user-item * {
     margin: 0 0 0 1em;
+}
+.user-list .user-item img {
+    width: 32px;
+    height: 32px;
 }
 .checked-users-summary {
     border: 1px solid #CCCCCC;
