--- a/templates/santa/application/run_discord.html.twig
+++ b/templates/santa/application/run_discord.html.twig
@@ -1,20 +1,20 @@
 {% extends 'santa/run.html.twig' %}
 
-{% set hasRestrictedUser = true %}
-
 {% import _self as current %}
 
 {% macro userSummary(user) %}
     <span class="user-summary">
-        <img src="{{ user.extra.image }}" alt="" />
-        <span>{{ user.extra.nickname }}</span>
+        {% if user.extra.image %}
+            <img src="{{ user.extra.image }}" alt="" />
+        {% endif %}
+        <span>{{ user.name }}</span>
         <span data-uncheck-user="user-{{ user.identifier }}" class="fas fa-times" title="Unselect this user"></span>
     </span>
 {% endmacro %}
 
 {% block user_item %}
     <label
-            class="user-item {{ user.extra.restricted ? 'restricted' : '' }}"
+            class="user-item"
             for="user-{{ user.identifier }}"
             data-search-index="{{ user.name ~ ' ' ~ user.extra.nickname }}"
     >
@@ -25,19 +25,21 @@
                id="user-{{ user.identifier }}"
                data-summary="{{ current.userSummary(user)|escape('html_attr') }}"
         >
-        <img src="{{ user.extra.image }}" alt="{{ user.name }}" />
-        <span>{{ user.name }} ({{ user.extra.nickname }})</span>
+        {% if user.extra.image %}
+            <img src="{{ user.extra.image }}" alt="{{ user.name }}" />
+        {% endif %}
+        <span>{{ user.name }}{% if user.extra.nickname %} ({{ user.extra.nickname }}){% endif %}</span>
     </label>
 {% endblock %}
 
 {% block next_step_explanation %}
     <p>
-        We are going to shuffle selected users and send them a private message in Slack, looking like this:
+        We are going to shuffle selected users and send them a private message in Discord, looking like this:
     </p>
 {% endblock %}
 
 {% block big_santa_warning %}
-    For Secret Santa with a lot of participants, the final step (send Slack private messages)
+    For Secret Santa with a lot of participants, the final step (send Discord private messages)
     can take some time (up to 20 sec).<br />
     Don't worry, in case something goes wrong, a "Retry" button will allow you to send remaining
     messages.
