WIP On the Microsoft Teams support
TL;DR: I have an OAuth access, but you can't do much with it.
I created an app on the Teams system and a Bot,
but you can't do the same flow as other apps.

Maybe the solution could be to use a "Tab".

--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -20,6 +20,9 @@
                 <a class="action hvr-buzz" href="{{ path('run', { application: 'discord' }) }}">
                     <i class="fab fa-discord"></i> Add to Discord
                 </a>
+                <a class="action hvr-buzz" href="{{ path('run', { application: 'teams' }) }}">
+                    <i class="fab fa-microsoft"></i> Add to Teams
+                </a>
             </div>
         </div>
     </div>
