--- a/templates/_seo.html.twig
+++ b/templates/_seo.html.twig
@@ -1,5 +1,5 @@
-{% set title = title|default('Slack Secret Santa - The Secret Santa bot for your Slack team') %}
-{% set description = description|default('A Slack application to throw Secret Santa with your team.') %}
+{% set title = title|default('Secret Santa - The Secret Santa bot for your Slack or Discord team') %}
+{% set description = description|default('An application to throw Secret Santa with your team on Slack, Discord, etc.') %}
 
 <title>{{ title }}</title>
 <meta name="description" content="{{ description }}">
