--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -8,7 +8,7 @@
         <div class="snow middleground layered"></div>
 
         <div class="jumbotron-inner">
-            <h1>Throw a Secret Santa with<br> your Slack team!</h1>
+            <h1>Throw a Secret Santa with<br> your team!</h1>
 
             <q><strong>Secret Santa</strong> is a Western Christmas tradition in which members of a group or
                 community are <strong>randomly</strong> assigned a person to whom they anonymously <strong>give a gift</strong>.</q>
@@ -17,11 +17,9 @@
                 <a class="action hvr-buzz" href="{{ path('run', { application: 'slack' }) }}">
                     <i class="fab fa-slack"></i> Add to Slack
                 </a>
-                {#
                 <a class="action hvr-buzz" href="{{ path('run', { application: 'discord' }) }}">
                     <i class="fab fa-discord"></i> Add to Discord
                 </a>
-                #}
             </div>
         </div>
     </div>
@@ -45,7 +43,7 @@
             </div>
             <div class="step-feature-text">
                 <h3>1. Connect to Your Application</h3>
-                <p>Click on the "Add to Slack" button below then authorize the app to access your Slack team.</p>
+                <p>Click on one of the "Add to Slack" or "Add to Discord" buttons above to authorize Secret Santa to access your account.</p>
             </div>
         </section>
 
@@ -55,7 +53,7 @@
             </div>
             <div class="step-feature-text">
                 <h3>2. Select Users</h3>
-                <p>We show you all your users (excluding the bots, because they don't do nice gifts). Just select which users will take part to your secret santa.</p>
+                <p>We show you all the users in your team (excluding the bots, because they don't do nice gifts). Just select the ones which will take part to your secret santa.</p>
             </div>
         </section>
 
