--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -29,7 +29,14 @@
                         <div class="logo-wrapper">
                             <img src="{{ asset('images/logo' ~ (spoilInProgress is defined ? '-spoiler' : '') ~ '.png') }}" alt="Secret Santa" />
                         </div>
-                        <h1>Slack<br>Secret Santa</h1>
+                        <div>
+                            <div class="site-brand">
+                                Secret Santa
+                            </div>
+                            <div class="site-headline">
+                                Share the Christmas spirit<br/>with your team
+                            </div>
+                        </div>
                     </a>
                 </div>
 
