--- a/templates/content/hall_of_fame.html.twig
+++ b/templates/content/hall_of_fame.html.twig
@@ -2,8 +2,8 @@
 
 {% block seo %}
     {{ include('_seo.html.twig', {
-        title: 'Slack Secret Santa - Hall of Fame',
-        description: 'List of awesome companies using Slack Secret Santa',
+        title: 'Secret Santa - Hall of Fame',
+        description: 'List of awesome companies using Secret Santa',
     }) }}
 {% endblock %}
 
@@ -14,12 +14,12 @@
                 <h1>Hall of Fame</h1>
 
                 <p>Running a Secret Santa in your company is a nice way to <strong>make your team happier, stronger and have a bit of fun</strong>.</p>
-                <p>Here is a partial list of all the great companies using Slack Secret Santa - if they are listed here, you know <strong>they care about their employees</strong>.</p>
+                <p>Here is a partial list of all the great companies using Slack Secret - if they are listed here, you know <strong>they care about their employees</strong>.</p>
             </div>
         </div>
 
         <div class="content they-use-it">
-            <h2 class="content-head is-center"><i class="fas fa-star spin"></i> They use Slack Secret Santa <i class="fas fa-star spin"></i></h2>
+            <h2 class="content-head is-center"><i class="fas fa-star spin"></i> They use Secret Santa <i class="fas fa-star spin"></i></h2>
 
             <ul>
                 {% for company in companies %}
