Updating the README and adding new hosting provider sponsor to footer

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -53,9 +53,11 @@
                     <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="far fa-life-ring"></i> Need help? Contact us!</a>
                 {% endblock contact %}
                 <p>
-                    Made with ♥ by <a href="http://jolicode.com">JoliCode</a>
+                    Made with ♥ by <a href="https://jolicode.com">JoliCode</a>
                     &mdash;
-                    Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>
+                    Hosted gracefully by the awesome peoples at <a href="https://www.clever-cloud.com/">Clever Cloud</a>
+                    &mdash;
+                    Emoji and logo provided free by <a href="https://www.emojione.com/">Emoji One</a>
                 </p>
             </footer>
         </div>
