--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -57,7 +57,7 @@
                     &mdash;
                     Hosted gracefully by the awesome peoples at <a href="https://www.clever-cloud.com/">Clever Cloud</a>
                     &mdash;
-                    Emoji and logo provided free by <a href="https://www.emojione.com/">Emoji One</a>
+                    Emoji and logo provided by <a href="https://www.emojione.com/">Emoji One</a>
                 </p>
             </footer>
         </div>
