--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -55,7 +55,7 @@
                 <p>
                     Made with ♥ by <a href="https://jolicode.com">JoliCode</a>
                     &mdash;
-                    Hosted gracefully by the awesome peoples at <a href="https://www.clever-cloud.com/">Clever Cloud</a>
+                    Hosted gracefully by the awesome people at <a href="https://www.clever-cloud.com/">Clever Cloud</a>
                     &mdash;
                     Emoji and logo provided by <a href="https://www.emojione.com/">Emoji One</a>
                 </p>
