--- a/templates/content/hall_of_fame.html.twig
+++ b/templates/content/hall_of_fame.html.twig
@@ -14,7 +14,7 @@
                 <h1>Hall of Fame</h1>
 
                 <p>Running a Secret Santa in your company is a nice way to <strong>make your team happier, stronger and have a bit of fun</strong>.</p>
-                <p>Here is a partial list of all the great companies using Slack Secret - if they are listed here, you know <strong>they care about their employees</strong>.</p>
+                <p>Here is a partial list of all the great companies using Secret Santa - if they are listed here, you know <strong>they care about their employees</strong>.</p>
             </div>
         </div>
 
